bug fixes ci siamo quasi